tests/negative/symbols/use_undef4.orng
trait Add {
    virtual fn add(&self, other: Int) -> Int
}

fn main() -> Int {
    let x: &dyn Add = undefined
    x.>add(4)
}